--- a/scripts/regression.Rmd
+++ b/scripts/regression.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Regression In R"
-output: github_document
+date: "`r format(Sys.Date(), '%d %b, %Y')`"
+output: 
+  github_document:
+    toc: yes
 ---
 
 # Introduction to Linear Regression
